# qt_spdlog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: qt_spdlog.h
src/: loggerdemo.cpp  loggerdemo.h  main.cpp
tests/: test_qt_spdlog.cpp
